[package]
name = "reviewporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
color-eyre = "0.6.2"
futures = "0.3.28"
html-escape = "0.2.13"
reqwest = { version = "0.11.16", features = ["rustls-tls", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = "0.1.12"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
